2006-07-09  Brian Bidulock  <bidulock@openss7.org>

	* README: updated quick installation instructions
	* am/openss7.am: added tag ids for optimization defines

2006-07-08  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped version to release candidate 2
	* NEWS: bumped version to release candidate 2
	* debian/changelog: bumped version to release candidate 2
	* debian/rules.in: clean deb package master build

2006-07-07  Brian Bidulock  <bidulock@openss7.org>

	* debian/copyright: typo

2006-07-06  Brian Bidulock  <bidulock@openss7.org>

	* debian/changelog: packaged release candidate for Mark Fugate
	* debian/control.in: first full debian master package build of debs on Ubuntu
	* debian/rules.in:: first full debian master package build of debs on Ubuntu

2006-07-05  Brian Bidulock  <bidulock@openss7.org>

	* NEWS: package release candidate for Mark Fugate
	* README: package release candidate for Mark Fugate
	* .pkgrelease: package release candidate for Mark Fugate
	* acinclude.m4: package release candidate for Mark Fugate

2006-07-04  Brian Bidulock  <bidulock@openss7.org>

	* openss7.spec.in: place all include files in development sub-package

2006-07-03  Brian Bidulock  <bidulock@openss7.org>

	* README: updated for release
	* README-alpha: updated for release
	* README-cvs: updated for release
	* scripts/texi/install.texi: updated for release
	* scripts/texi/testsuite.texi: updated for release
	* texi/install.texi: updated for release
	* texi/testsuite.texi: updated for release
	* m4/kernel.m4: still a problem with KBUILD_STR quotes
	* am/openss7.am: make logging targets precious

2006-07-01  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: changes for 2.6.17 kernel
	* scripts/cflagscheck: check for KBUILD_STR
	* am/kernel.am: add new build flags to modpost
	* debian/changelog: changes for Ubuntu dpkg build
	* debian/control.in: changes for Ubuntu dpkg build

2006-06-30  Brian Bidulock  <bidulock@openss7.org>
