@@ -1,5 +1,5 @@
 OpenSS7 Master Package -- NexusWare procedures.  2006-07-11
-$Id$
+$Id: README-nexusware,v 1.1.2.1 2006/07/11 01:57:54 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation  <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock  <bidulock@openss7.org>
 See the end for copying conditions (for this file).
