@@ -1,7 +1,7 @@
 ## vim: ft=automake comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 ## =============================================================================
 ## 
-# @(#) $RCSfile: genksyms.am,v $ $Name:  $($Revision: 0.9.2.40 $) $Date: 2006/06/21 13:38:52 $
+# @(#) $RCSfile: genksyms.am,v $ $Name:  $($Revision: 0.9.2.41 $) $Date: 2006/07/11 01:57:55 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -46,11 +46,14 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2006/06/21 13:38:52 $ by $Author: brian $
+## Last Modified $Date: 2006/07/11 01:57:55 $ by $Author: brian $
 ##
 ## -----------------------------------------------------------------------------
 ##
 ## $Log: genksyms.am,v $
+## Revision 0.9.2.41  2006/07/11 01:57:55  brian
+## - nexusware build fixes
+##
 ## Revision 0.9.2.40  2006/06/21 13:38:52  brian
 ## - add -q option to ld when using loadscript
 ##
